name:                hermit-web

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Web service interface to HERMIT GHC Plugin
-- description:
homepage:            http://www.ittc.ku.edu/csdl/fpg
license:             BSD3
license-file:        LICENSE
author:              KU FPG
maintainer:          afarmer@ittc.ku.edu
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.14

Library
  ghc-options: -Wall -fno-warn-orphans
  Build-Depends: base >= 4 && < 5,
                 blaze-builder,
                 bytestring,
                 containers,
                 data-default,
                 ghc >= 7.6,
                 hermit,
                 http-types,
                 kure >= 2.6.19,
                 aeson,
                 mtl,
                 scotty >= 0.5.0,
                 template-haskell,
                 text,
                 transformers,
                 wai,
                 warp

  default-language: Haskell2010

  Exposed-modules:
        HERMIT.Web
  other-modules:
        HERMIT.Web.JSON
        HERMIT.Web.Renderer
        HERMIT.Web.Types



--  Other-modules:
  Hs-Source-Dirs: src

executable hermit-web
  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs
  Hs-source-dirs: driver
  default-language: Haskell2010

  -- Modules included in this executable, other than Main.
  -- other-modules:

  build-depends: base >= 4 && < 5,
                 hermit,
                 hermit-web,
                 process
