name:                hermit-web

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Web service interface to HERMIT GHC Plugin
-- description:
homepage:            http://www.ittc.ku.edu/csdl/fpg
license:             BSD3
license-file:        LICENSE
author:              KU FPG
maintainer:          afarmer@ittc.ku.edu
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.14

library
  ghc-options:          -Wall
                        -fno-warn-orphans
  build-depends:        aeson,
                        base >= 4 && < 5,
                        blaze-builder,
                        containers,
                        data-default,
                        haskeline, 
                        hermit >= 0.4,
                        http-types,
                        mtl,
                        scotty >= 0.7,
                        stm,
                        text,
                        wai,
                        wai-extra

  default-language:     Haskell2010

  exposed-modules:      HERMIT.Web
  other-modules:        HERMIT.Web.Actions
                        HERMIT.Web.JSON
                        HERMIT.Web.Renderer
                        HERMIT.Web.Types
                        Paths_hermit_web
  hs-source-dirs:       src

executable hermit-web
  ghc-options:          -Wall
  main-is:              Main.hs
  hs-source-dirs:       driver
  default-language:     Haskell2010
  build-depends:        base >= 4 && < 5,
                        hermit,
                        hermit-web,
                        split
